--- a/index.html
+++ b/index.html
@@ -376,7 +376,8 @@
             window.console.log(f"Displayed 'Level {level}' title.")
 
         # Proceed to initialize the game after 1 second
-        window.setTimeout(lambda x: initialize_game(), 1000)
+        window.setTimeout(initialize_game, 1000)
+        window.console.log(f"Scheduled initialize_game to start Level {level} in 1 second.")
 
     # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     # 11) DRAW FINAL SCORE
@@ -397,6 +398,7 @@
             show_high_score_prompt()
         else:
             window.setTimeout(reset_game, 3000)
+            window.console.log("Scheduled game reset after final score.")
 
     # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     # 12) STARS
@@ -714,6 +716,7 @@
                     e5["pos"][1] += ENEMY_SIZE
                 ENEMY_SPEED = -ENEMY_SPEED
                 window.console.log(f"Enemies changed direction. New speed: {ENEMY_SPEED}")
+
         else:
             # Boss movement
             boss_pos[0] += boss_direction * 10
