--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
 
     level_image_paths = {
         1: ["level1/dog.png","level1/fire.png","level1/matches.png","level1/petrolcan.png","level1/redtshirt.png"],
-        2: ["level2/broken_guitar.png","level2/brokenbtl.png","level2/greentshirt.png","level2/sticker.png","level2/suitcase.png"],
-        3: ["level3/cat.png","level3/chemical_paws.png","level3/flask.png","level3/purpletshirt.png","level3/spill_smoke.png"],
+        2: ["level2/broken guitar.png","level2/brokenbtl.png","level2/greentshirt.png","level2/sticker.png","level2/suitcase.png"],
+        3: ["level3/cat.png","level3/chemical.paws.png","level3/flask.png","level3/purpletshirt.png","level3/spill.smoke.png"],
     }
     level_images = {
         lvl: [html.IMG(src=path) for path in level_image_paths[lvl]] 
